force-app/main/default/objects/Leave_Entitlement__c/Leave_Entitlement__c.object-meta.xml
<CustomObject>
    <label>Leave Entitlement</label>
    <nameField>
        <displayFormat>LE-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Entitlement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>