force-app/main/default/objects/Leave_Entitlement__c/fields/Accumulated_Paid_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Accumulated_Paid_Leaves__c</fullName>
    <formula>MFLOOR(((Paid_Leave__c+Carry_forward_Paid_Leave__c+Additional_Paid_Leaves__c)*(TODAY() - Start_Date__c))/(End_Date__c - Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accumulated Paid Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>