force-app/main/default/objects/Leave_Entitlement__c/fields/Additional_Paid_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Additional_Paid_Leaves__c</fullName>
    <label>Additional Paid Leaves</label>
    <summarizedField>Additional_Leave__c.No_of_Days__c</summarizedField>
    <summaryFilterItems>
        <field>Additional_Leave__c.Type__c</field>
        <operation>equals</operation>
        <value>Leave</value>
    </summaryFilterItems>
    <summaryForeignKey>Additional_Leave__c.Leave_Entitlement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>