force-app/main/default/objects/Leave_Entitlement__c/fields/Carry_forward_Paid_Leave__c.field-meta.xml
<CustomField>
    <fullName>Carry_forward_Paid_Leave__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Carry forward Paid Leave</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>