force-app/main/default/objects/Leave_Entitlement__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leave Entitlement</relationshipLabel>
    <relationshipName>Leave_Entitlement</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>