force-app/main/default/objects/Leave_Entitlement__c/fields/Paid_Leave__c.field-meta.xml
<CustomField>
    <fullName>Paid_Leave__c</fullName>
    <label>Paid Leave</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>