force-app/main/default/objects/Leave_Entitlement__c/fields/Remaining_Paid_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Paid_Leaves__c</fullName>
    <formula>Paid_Leave__c +  Carry_forward_Paid_Leave__c + Additional_Paid_Leaves__c -  Used_Paid_Leaves__c</formula>
    <label>Remaining Paid Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>