force-app/main/default/objects/Leave_Entitlement__c/fields/Remaining_Sick_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Sick_Leaves__c</fullName>
    <formula>Sick_Leave__c - Used_Sick_Leaves__c</formula>
    <label>Remaining Sick Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>