force-app/main/default/objects/Leave_Entitlement__c/fields/Used_Paid_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Used_Paid_Leaves__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Used Paid Leaves</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>